# helide

./: .gitignore  .gitmodules  Cargo.toml  README.md  plan.md
.github/workflows/: build-macos.yml
extra/osx/Helide.app/Contents/: Info.plist
extra/osx/Helide.app/Contents/Resources/: Helide.icns
macos-builder/: run
src/: app.rs  backend.rs  config.rs  input.rs  layout.rs  main.rs  renderer.rs
src/platform/: macos.rs
src/shaders/: bg.wgsl  composite.wgsl  glyph.wgsl
src/terminal/: cells.rs  input.rs  mod.rs
