[package]
name = "helide"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
default-run = "helide"

[[bin]]
name = "helide"
path = "src/main.rs"

[dependencies]
helix-term = { git = "https://github.com/polachok/helix", branch = "for-helide" }
helix-tui = { git = "https://github.com/polachok/helix", branch = "for-helide" }
helix-view = { git = "https://github.com/polachok/helix", branch = "for-helide" }
helix-core = { git = "https://github.com/polachok/helix", branch = "for-helide" }
helix-lsp = { git = "https://github.com/polachok/helix", branch = "for-helide" }
helix-loader = { git = "https://github.com/polachok/helix", branch = "for-helide" }
helix-event = { git = "https://github.com/polachok/helix", branch = "for-helide" }
helix-stdx = { git = "https://github.com/polachok/helix", branch = "for-helide" }

winit = "0.30"
wgpu = "24"
crossfont = "0.9"

tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }
arc-swap = "1.8"
log = "0.4"
anyhow = "1"
serde_json = "1"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
dirs = "6"
which = "7"
toml = "0.8"
content_inspector = "0.2"
arboard = "3"
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = ["NSString", "NSProcessInfo", "NSURL", "NSArray", "NSObject", "NSDictionary", "NSUserDefaults", "NSValue"] }
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSApplication", "NSMenu", "NSMenuItem", "NSEvent", "NSResponder", "NSRunningApplication", "NSOpenPanel", "NSSavePanel", "NSPanel", "NSWindow", "NSDocumentController", "NSAppearance"] }

